@@ -474,6 +474,9 @@ portout [Pp][Oo][Rr][Tt][Oo][Uu][Tt]
 "*"             { count(); return '*'; }
 "\\"            { count(); return B256INTDIV; }
 "\%"            { count(); return B256MOD; }
+"|"            { count(); return B256BINARYOR; }
+"&"            { count(); return B256BINARYAND; }
+"~"            { count(); return B256BINARYNOT; }
 "/"             { count(); return '/'; }
 "^"             { count(); return '^'; }
 "="             { count(); return '='; }
